# mpvoracious

./: .gitignore  CONTEXT.md  Makefile  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: issue.md
.github/RELEASE/: custom_subtitle_filter_example.lua  release-boilerplate.md
.github/workflows/: auto-release.yml
docs/adr/: 0001-track-media-delivery-per-linked-note.md  0002-stabilize-target-fields-but-refresh-encoding-settings.md
docs/superpowers/plans/: 2026-06-24-mpvacious-mining-history.md  2026-06-25-mpvoracious-release.md  2026-06-29-mining-history-note-claims.md
docs/superpowers/specs/: 2026-06-24-mpvacious-mining-history-design.md  2026-06-29-mining-history-note-claims-design.md  2026-07-18-mining-history-status-resend-filters-design.md
howto/: create_quick_card.md  flatpak.md  goldendict.md  mining_history.md  yomichan.md
mpvacious/: helpers.lua  main.lua  pyproject.toml  version.json
mpvacious/anki/: ankiconnect.lua  new_note_checker.lua  note_exporter.lua
mpvacious/anki/tests/: test_new_note_checker.lua
mpvacious/config/: cfg_mgr.lua  default_config.conf  defaults.lua
mpvacious/encoder/: encoder.lua  ffmpeg.lua  mpv.lua
mpvacious/history/: capture.lua  client.lua  controller.lua  server_process.lua  source_info.lua
mpvacious/history/tests/: test_server_process.lua
mpvacious/history_server/: store.py  web.py
mpvacious/history_server/tests/: test_store.py  test_web.py
mpvacious/utils/: filename_factory.lua  release_checker.lua
scripts/: install.ps1  install.sh  symlink.sh
