[project]
name = "mpvoracious-history-server"
version = "0.1.0"
description = "Local mining history helper for mpvoracious"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["history_server"]

[tool.pytest.ini_options]
testpaths = ["history_server/tests"]
pythonpath = ["."]
